# webash

./: .env.example  Makefile  README.md  docker-compose.yaml  pyproject.toml
.deployment/: Dockerfile  docker-compose.yaml
.github/workflows/: deployment.yaml  dev.yaml  development.yaml
migrations/: env.py
migrations/versions/: 45436f294ff3_create_users_table.py  5cd94d23db70_create_codes_table.py  8106144a752e_user_table.py  dc3d77b5d04e_create_codes_table.py  e31b0ae46eca_update_tid_column_type.py
src/: __init__.py  config.py  database.py  main.py  utils.py
src/api/: __init__.py
src/api/v1/: __init__.py
src/api/v1/routers/: console.py  user.py
src/api/v1/services/: console.py  user.py
src/base/: exceptions.py  mixins.py  types.py
src/base/utils/: auth.py  depends.py  shell.py  token.py  ws.py
src/bot/: app.py  command.py  service.py
src/console/: router.py
src/core/base/: auth.py  container.py  proxy.py  shell.py  token.py  ws.py
src/core/models/: __init__.py  user.py
src/core/repositories/: user.py
src/core/schemas/: user.py
src/core/utils/: auth.py  container.py  exceptions.py  funcs.py  models.py  proxy.py  shell.py  sockets.py  token.py
src/users/: models.py  repository.py  router.py  schemas.py  service.py
templates/: index.html
tests/: conftest.py  utils.py
tests/api/v1/users/: test_me.py  test_token.py  test_token_refresh.py
tests/bot/: test_command_login_handler.py  test_command_start_handler.py
