[tool.poetry]
name = "webash"
version = "0.1.0"
description = ""
authors = ["Mirzomumin <mirzomumin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
aiogram = "^3.15.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
pre-commit = "^4.0.1"
pyjwt = "^2.10.1"
websockets = "^14.1"
docker = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
